manifests/hello/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: hello-svc
              servicePort: 80
